<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.HistoricActivity"
    android:orientation="vertical"
    android:background="@color/light_grey">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_7d_rlayout">

        <TextView
            android:id="@+id/activity_historic_7d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven_days"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_7d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_6d_rlayout">

        <TextView
            android:id="@+id/activity_historic_6d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six_days"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_6d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_5d_rlayout">

        <TextView
            android:id="@+id/activity_historic_5d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_days"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_5d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_4d_rlayout">

        <TextView
            android:id="@+id/activity_historic_4d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_days"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_4d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_3d_rlayout">

        <TextView
            android:id="@+id/activity_historic_3d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_days"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_3d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_2d_rlayout" >

        <TextView
            android:id="@+id/activity_historic_2d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_days"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_2d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/activity_historic_1d_rlayout">

        <TextView
            android:id="@+id/activity_historic_1d_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_day"
            android:textStyle="bold"
            android:textColor="@color/Dark"
            android:textSize="@dimen/size_title"/>

        <ImageView
            android:id="@+id/activity_historic_comment_1d_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_comment_black_48px" />


    </RelativeLayout>



</LinearLayout>
