<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="150dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/green_light"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/sms_popup_phone_number_edt"
            android:layout_width="@dimen/layout_width_edt"
            android:layout_height="@dimen/layout_height_edt"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:inputType="number"
            android:hint="@string/phone_number"/>

        <TextView
            android:id="@+id/sms_popup_sms_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/txt_view_margin_end"
            android:textSize="@dimen/size_title"
            android:text="@string/sms"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/sms_popup__contacts_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/imv_margin_start"
            app:srcCompat="@drawable/ico_contacts"
            android:contentDescription="@string/desc"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sms_popup_sms_edt"
            android:layout_width="@dimen/layout_width_edt"
            android:layout_height="@dimen/layout_height_edt"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:hint="-"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/sms_popup_send_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/ico_send" />

    </RelativeLayout>


</LinearLayout>